test/tests/diagnostics/syntax_err04/jastadd.err.expected
Problems during JRAG parsing:
Error at tests/diagnostics/syntax_err04/Test.jrag:4:7: unexpected token "void":
  syn void A.v() = 3;
      ^^^^
